@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-13T08:14:21Z",
-  "count_outdated" : 196,
-  "uniques_outdated" : 169,
+  "timestamp" : "2023-10-16T00:50:30Z",
+  "count_outdated" : 198,
+  "uniques_outdated" : 170,
   "count" : 210,
   "uniques" : 181,
   "clones" : [
-    {
-      "timestamp": "2023-10-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-03T00:00:00Z",
       "count": 2,
