@@ -1,12 +1,7 @@
 {
-  "count": 14,
-  "uniques": 5,
+  "count": 12,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-10-01T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-03T00:00:00Z",
       "count": 2,
